nginx (1:1.13.5-4) UNRELEASED; urgency=medium

  * Fix shell scripts (enforce '-e' option).

 -- Konstantin Demin <rockdrilla@gmail.com>  Tue, 19 Sep 2017 12:50:46 +0300

nginx (1:1.13.5-3) experimental; urgency=medium

  * Cherry-pick upstream patch:
    - Removed more remnants of the old pthread implementation.
  * Remove upstart-related files.
  * Explicitly disable autoreconf.
  * Switch Priority of all packages to optional.
  * Fix init scripts.
  * Fix {pre|post}{inst|rm} scripts.

 -- Konstantin Demin <rockdrilla@gmail.com>  Tue, 19 Sep 2017 10:20:56 +0300

nginx (1:1.13.5-2) experimental; urgency=medium

  * Cherry-pick upstream patches:
    - Stream: fixed logging UDP upstream timeout.
    - HTTP/2: added logging of 400 (Bad Request) reasons.
    - HTTP/2: fixed debug log about indexed headers.
    - HTTP/2: shortened some debug log messages.

 -- Konstantin Demin <rockdrilla@gmail.com>  Mon, 18 Sep 2017 00:36:14 +0300

nginx (1:1.13.5-1) experimental; urgency=medium

  * New upstream release.
  * Drop cherry-picked patches.
  * Cherry-pick upstream patches:
    - Stream: relaxed next upstream condition (ticket #1317).
    - HTTP/2: signal 0-byte HPACK's dynamic table size.
    - Fixed ngx_gmtime() on 32-bit platforms with 64-bit time_t.
    - Introduced time truncation to December 31, 9999 (ticket #1368).

 -- Konstantin Demin <rockdrilla@gmail.com>  Wed, 13 Sep 2017 19:26:12 +0300

nginx (1:1.13.4-2) experimental; urgency=medium

  * Cherry-pick upstream patches:
    - SSL: the $ssl_client_escaped_cert variable
    - SSL: fixed possible use-after-free in $ssl_server_name
    - Upstream: unconditional parsing of last_modified_time
    - Secure link: fixed stack buffer overflow

 -- Konstantin Demin <rockdrilla@gmail.com>  Wed, 23 Aug 2017 19:52:16 +0300

nginx (1:1.13.4-1) experimental; urgency=medium

  * New upstream release.
  * Drop cherry-picked patches.

 -- Konstantin Demin <rockdrilla@gmail.com>  Tue, 08 Aug 2017 22:24:07 +0300
