@@ -45,6 +45,12 @@ ngx_generate_substvars_binary: ngx_generate_substvars
 	  echo "nginx:Depends=nginx-bin (>= $${V}) | nginx-bin (<< $${V}.0~)"; \
 	} >> debian/substvars.$(PKG_STEM).in
 
+override_dh_auto_configure: ngx_merge_sysvinit_scripts
+ngx_merge_sysvinit_scripts:
+	for I in nginx nginx.root-nginx; do \
+	  cat debian/scripts/init-functions.in >> debian/$$I.init.in; \
+	done
+
 override_dh_install: ngx_cleanup_conf_templates
 ngx_cleanup_conf_templates:
 	rm -f conf/nginx.conf
